--- a/health_appointment/templates/health_appointment/create_appointment_success.html
+++ b/health_appointment/templates/health_appointment/create_appointment_success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
     <title>Title</title>
 </head>
 <body>
